<resources>
    <string name="app_name">Wachanga</string>

    <string name="main_screen_toolbar">Список заметок</string>
    <string name="main_screen_hide">Скрыть выполненнные</string>
    <string name="main_screen_show">Отобразить выполненнные</string>
    <string name="main_screen_empty">Заметок пока нет.\nНажмите + чтобы добавить заметку</string>
    <string name="main_screen_flb_content_description">Кнопка добавить заметку</string>

    <string name="add_note_screen_toolbar">Новая заметка</string>
    <string name="edit_note_screen_toolbar">Заметка</string>
    <string name="add_edit_note_screen_toolbar_reminder">Reminder</string>
    <string name="add_edit_note_screen_toolbar_delete">Delete</string>
    <string name="add_edit_screen_til_hint">Текст заметки</string>
    <string name="add_edit_screen_action_reminder_content_description">Кнопка добавить напоминание к заметке</string>
    <string name="add_edit_screen_action_delete_content_description">Кнопка удалить заметку</string>

    <string name="reminder_notification_note_title">Заметка</string>
    <string name="reminder_notification_note_content">Текст заметки</string>
    <string name="reminder_notification_channel_id">137</string>
    <string name="reminder_notification_channel_name">Reminder</string>
    <string name="exact_alarm_snackbar_description">Нужно разрешение для точных уведомлений</string>
    <string name="exact_alarm_snackbar_action">Настройки</string>
</resources>
