<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_56"
        android:background="?attr/colorPrimary"
        android:navigationIcon="@drawable/ic_arrow_left"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="@string/edit_note_screen_toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/actionReminder"
                android:layout_width="@dimen/size_40"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_edit_screen_action_reminder_content_description"
                android:scaleType="centerInside"
                android:src="@drawable/ic_bell_off"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/actionDelete"
                android:layout_width="@dimen/size_40"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_edit_screen_action_delete_content_description"
                android:scaleType="centerInside"
                android:src="@drawable/ic_bin"
                android:visibility="gone" />

        </LinearLayout>

    </Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="@dimen/size_24"
        android:hint="@string/add_edit_screen_til_hint"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text|textCapSentences|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/flbSave"
        style="@style/RoundedFloatingActionButton"
        android:layout_width="@dimen/size_56"
        android:layout_height="@dimen/size_56"
        android:layout_margin="@dimen/space_16"
        android:backgroundTint="?attr/colorSecondary"
        android:contentDescription="@string/main_screen_flb_content_description"
        app:icon="@drawable/ic_checkmark"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
